--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,9 @@
 ai-sales-predict-dataset-master filter=lfs diff=lfs merge=lfs -text
 CECS551_dataset_02 filter=lfs diff=lfs merge=lfs -text
 Arima_webApp filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.py filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
+*.cfg filter=lfs diff=lfs merge=lfs -text
+*.ipynb filter=lfs diff=lfs merge=lfs -text
